--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 /* css styles */
-/* original from: https://raw.githubusercontent.com/satRdays/quarto-satrdays-template/f57f24aec2f0d6620de05cf043958e651f064d2a/css/styles.css**
+/* original from: https://raw.githubusercontent.com/satRdays/quarto-satrdays-template/f57f24aec2f0d6620de05cf043958e651f064d2a/css/styles.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
+
+h1, h2, h3, h4 {
+  font-family: "Roboto", sans-serif;
+}
 
 .navbar ul.dropdown-menu {
 	margin-top: 10px;
@@ -9,18 +16,6 @@
 .headroom-target, header.headroom {
 	border-bottom: 1px solid #ddd;
 	background: #50a7ff12;
-}
-
-.title {
-  background: #2165b6; 
-  background: linear-gradient(rgba(33, 101, 182,0.95), rgba(33, 101, 182,0.3)),url('../img/background.png') !important;  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(rgba(33, 101, 182,0.95), rgba(33, 101, 182, 0.3)), url('../img/background.png') !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-repeat: no-repeat;
-  background-size: contain;
-  color: white; 
-  padding: 10px; 
-  font-weight: 450;
-  min-height: 220px;
 }
 
 .text_block {
@@ -205,6 +200,10 @@ a {
   color: #3c3888;
 }
 
-.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
+.navbar-brand:hover, .navbar-brand:focus {
   color: #3b3882;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #454545;
 }
