improve fonts and sizes

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
 
-h1, h2, h3, h4 {
+body {
   font-family: "Roboto", sans-serif;
+  font-weight: 100;
 }
+
+p {
+  font-size: 1.3em;
+}
+
 
 .navbar ul.dropdown-menu {
 	margin-top: 10px;
@@ -37,13 +43,13 @@ h1, h2, h3, h4 {
 
 #banner h1 {
   font-size: 4.5rem !important;
-  font-weight: 510;
+  font-weight: 100;
   line-height: 1.2;
 }
 
 #banner h2 {
   font-size: 2.5rem !important;
-  font-weight: 400;
+  font-weight: 100;
   border: none;
 }
 
@@ -204,6 +210,6 @@ a {
   color: #3b3882;
 }
 
-.navbar-dark .navbar-nav .nav-link {
+.navbar-dark .navbar-nav .nav-link  .navbar-brand {
   color: #454545;
 }
