--- a/styles.css
+++ b/styles.css
@@ -199,15 +199,15 @@ footer.footer .nav-footer, #quarto-header nav {
 }
 
 .nav-link.active {
-  color: #3c3886;
+  color: #3c3886 !important;
 }
 
 a {
-  color: #3c3888;
+  color: #3c3888 !important;
 }
 
 .navbar-brand:hover, .navbar-brand:focus {
-  color: #3b3882;
+  color: #3b3882 !important;
 }
 
 .navbar-dark .navbar-nav .nav-link  .navbar-brand .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
