--- a/styles.css
+++ b/styles.css
@@ -197,3 +197,25 @@ footer.footer .nav-footer, #quarto-header nav {
     margin: 15px 5px 0px;
   }
 }
+
+
+
+.navbar-dark .navbar-brand {
+  color: #454545 !important;
+}
+
+.nav-link.active {
+  color: #3c3886 !important;
+}
+
+a {
+  color: #454545 !important;
+}
+
+.navbar-brand:hover, .navbar-brand:focus {
+  color: #3b3882 !important;
+}
+
+.navbar-dark .navbar-nav .nav-link  .navbar-brand .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+  color: #454545 !important;
+}
