--- a/styles.scss
+++ b/styles.scss
@@ -8,7 +8,6 @@ $font-family-sans-serif: 'Open Sans', Tahoma, sans-serif !default;
 
 $primary: #4c3ceb !default;
 
-$body-font-size: 1.5rem !default;
 
 /*-- scss:rules --*/
 
@@ -50,4 +49,92 @@ h1, h2, h3, h4, h5 {
 
 #quarto-content > * {
   padding-top: 0px;
+  
 }
+
+/* text block */
+
+.text_block{
+  padding-left: 30px !important;
+}
+
+/* about banner */
+
+.about_banner, .title{
+  padding-left: 30px !important;
+  background-color: $primary !important;
+  color: #fff !important;
+}
+
+.about_banner, h1{
+  font-size: 66px;
+  font-weight: 100;
+}
+
+/* Sponsors */
+.sponsorsFooter{
+  width: 100%;
+  height: auto;
+  padding: 10px 0 10px;
+  margin-top: 0px;
+  z-index: 1 !important;
+  text-align: center !important;
+}
+
+.sponsorsFooter img {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  height: auto;
+  vertical-align: middle;
+  max-width: 250px;
+  margin: 1em;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.sponsorsFooter ul {
+  padding: 0;
+  margin: 15px 0 0 0;
+  list-style: none;
+  display: block;
+}
+
+.sponsorsFooter ul.enter > span:not(.hover) {
+  opacity: .1;
+}
+
+.sponsorsFooter ul.enter > span.hover {
+  opacity: 1;
+  box-shadow: inset -1px 0 0 0 rgba(0, 0, 0, .1), inset 1px 0 0 0 rgba(0, 0, 0, .1);
+}
+
+.sponsorsFooter ul span {
+  display: inline !important;
+  background: white;
+  word-break: break-all;
+  word-wrap: break-word;
+  margin: 0px;
+  padding: 26px 0;
+  -webkit-transition: opacity 0.25s ease;
+  -moz-transition: opacity 0.25s ease;
+  -ms-transition: opacity 0.25s ease;
+  -o-transition: opacity 0.25s ease;
+  transition: opacity 0.25s ease;
+}
+
+.sponsorsFooter ul span,
+.sponsorsFooter ul span li > a {
+  
+  border: none !important;
+  outline: 0 !important;
+  text-decoration: none !important;
+}
+
+.sponsorsFooter ul li {
+  margin: 5px 65px 0px;
+  display: inline-block;
+}
+
