--- a/styles.scss
+++ b/styles.scss
@@ -65,13 +65,16 @@ h1, h2, h3, h4, h5 {
 /* about banner */
 
 .about_banner, .title{
-  padding-left: 30px !important;
+  padding-left: 1rem !important;
+  padding-top: 3rem !important;
+  padding-bottom: 1rem !important;
+  margin-bottom: 1rem !important;
   background-color: $primary !important;
   color: #fff !important;
 }
 
 .about_banner, h1{
-  font-size: 66px;
+  font-size: 3rem;
   font-weight: 100;
 }
 
@@ -148,5 +151,8 @@ h1, h2, h3, h4, h5 {
 }
 
 
-/* navbar */
+p, .level2 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 
