--- a/styles.scss
+++ b/styles.scss
@@ -8,6 +8,7 @@ $font-family-sans-serif: 'Open Sans', Tahoma, sans-serif !default;
 
 $primary: #4c3ceb !default;
 
+$font-size-root: 20px !important;
 
 /*-- scss:rules --*/
 
@@ -46,21 +47,6 @@ h1, h2, h3, h4, h5 {
   line-height: 1.5;
 }
 
-#quarto-content > * {
-  padding-top: 0px;
-  
-}
-
-/* text block */
-
-.text_block {
-  padding-left: 5em !important;
-  padding-right: 5em !important;
-}
-
-.text_block > h2,  .text_block > h3 {
-  text-align: center;
-}
 
 /* about banner */
 
@@ -150,9 +136,7 @@ h1, h2, h3, h4, h5 {
   
 }
 
-
-p, .level2, h4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.quarto-title-banner {
+  padding-top: 2.5em;
+  padding-bottom: 0em;
 }
-
