Link a eventbrite y keynote speakers
Agregué en novedades datos sobre la inscripción, costos y link a eventbrite, e info sobre los keynote speakers. También el link a eventbrite en el espacio de llamado de trabajos, en los tres idiomas. Hay que revisar el portugués.

--- a/styles.scss
+++ b/styles.scss
@@ -140,3 +140,8 @@ h1, h2, h3, h4, h5 {
   padding-top: 2.5em;
   padding-bottom: 0em;
 }
+
+.boxBorder {
+     border: 1px solid #585858;
+     padding: 10px;
+   }
