--- a/styles.scss
+++ b/styles.scss
@@ -145,3 +145,24 @@ h1, h2, h3, h4, h5 {
      border: 1px solid #585858;
      padding: 10px;
    }
+
+
+.card-header-keynote{
+  background-color: #FDC08666;
+  font-weight: bold;
+}
+
+.cards-display{
+  display: grid;
+}
+
+.html-fill-container > .html-fill-item {
+  flex: inherit;
+}
+
+
+h2 {
+    font-size: 1.65rem;
+    text-align: center;
+}
+
