--- a/styles.scss
+++ b/styles.scss
@@ -10,11 +10,15 @@ $primary: #4c3ceb !default;
 
 $font-size-root: 20px !important;
 
+$bslib-grid-height: auto !important;
+
 /*-- scss:rules --*/
 
 h1, h2, h3, h4, h5 {
     font-family: "Raleway", "Tahoma", sans-serif !important;
 }
+
+
 
 
 /* Banner */
