fixing the bslib cards

--- a/styles.scss
+++ b/styles.scss
@@ -12,12 +12,23 @@ $font-size-root: 20px !important;
 
 $bslib-grid-height: auto !important;
 
+
 /*-- scss:rules --*/
 
 h1, h2, h3, h4, h5 {
     font-family: "Raleway", "Tahoma", sans-serif !important;
 }
 
+
+
+
+.bslib-grid {
+  height: auto !important;
+}
+
+.html-fill-container{
+  display: block !important;
+}
 
 
 
